Fixed the problem with page overflow through the mobile menu

--- a/scss/_base.scss
+++ b/scss/_base.scss
@@ -11,7 +11,8 @@ body {
   font-size: 18px;
   font-weight: 400;
   line-height: 1.172;
-  margin: 0 auto;
+  margin: 0;
+  overflow-x: hidden;
 
   @media screen and (min-width: $bp-mobile) {
     line-height: 1.5;
